--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,11 @@
 */
 
 /* 1. Theme default css */
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #333;
+  font-size: 16px;
   line-height: 1.6;
 }
 
@@ -40,32 +41,16 @@ p {
   font-size: 14px;
 }
 
-.mt-120 {
-  margin-top: 120px;
+.pt-100 {
+  padding-top: 100px;
 }
 
-.mb-120 {
-  margin-bottom: 120px;
-}
-
-.pt-60 {
-  padding-top: 60px;
+.pb-100 {
+  padding-bottom: 100px;
 }
 
 .pb-60 {
   padding-bottom: 60px;
-}
-
-.mt-60 {
-  margin-top: 60px;
-}
-
-.mb-60 {
-  margin-bottom: 60px;
-}
-
-.mb-0 {
-  margin-bottom: 0;
 }
 
 .img {
@@ -86,7 +71,7 @@ a:focus,
 a:hover {
   text-decoration: none;
   outline: none;
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 ul {
@@ -99,19 +84,13 @@ li {
 }
 
 *::-moz-selection {
-  background: #ff5e18;
-  color: #fff;
-  text-shadow: none;
-}
-
-::-moz-selection {
-  background: #ff5e18;
+  background: #ff0022;
   color: #fff;
   text-shadow: none;
 }
 
 ::selection {
-  background: #ff5e18;
+  background: #ff0022;
   color: #fff;
   text-shadow: none;
 }
@@ -129,7 +108,7 @@ li {
 
 .box_btn a {
   display: inline-block;
-  background-color: #ff5e18;
+  background-color: #ff0022;
   color: #fff;
   text-transform: capitalize;
   padding: 10px 30px;
@@ -236,7 +215,7 @@ input[type="submit"]:hover {
 }
 
 .page-title h2 {
-  color: #ff5e18;
+  color: #ff0022;
   text-transform: capitalize;
   font-size: 20px;
   font-weight: 600;
@@ -249,7 +228,7 @@ input[type="submit"]:hover {
 .page-title h2:after {
   position: absolute;
   content: "";
-  background-color: #ff5e18;
+  background-color: #ff0022;
 }
 
 .page-title h2:before {
@@ -284,13 +263,13 @@ input[type="submit"]:hover {
 }
 .mainmenu ul li.current a,
 .mainmenu ul li a:hover {
-  color: #635cdb;
+  color: #333;
 }
 .header.header-fixed.sticky li.current a {
-  color: #635cdb !important;
+  color: #333 !important;
 }
 .header-top {
-  background-color: #635cdb;
+  background-color: #333;
   color: #fff;
   padding: 10px 0;
 }
@@ -454,7 +433,7 @@ input[type="submit"]:hover {
 }
 
 .slider .owl-dots div.active {
-  background-color: #635cdb;
+  background-color: #ff0022;
 }
 
 .slider .owl-controls {
@@ -492,7 +471,7 @@ input[type="submit"]:hover {
   content: "";
   width: 80px;
   height: 2px;
-  background-color: #635cdb;
+  background-color: #ff0022;
   bottom: 0;
   left: 50%;
   margin-left: -40px;
@@ -524,7 +503,7 @@ input[type="submit"]:hover {
 }
 
 .mainmenu ul li:hover > a {
-  color: #ff5e18 !important;
+  color: #ff0022 !important;
 }
 
 .mainmenu ul li ul.sub-menu::before {
@@ -544,7 +523,7 @@ input[type="submit"]:hover {
 }
 
 .mainmenu ul li.active a {
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 .mainmenu ul li ul.sub-menu {
@@ -562,7 +541,16 @@ input[type="submit"]:hover {
   transform-origin: 0 0 0;
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
 }
-
+.box-btn {
+  display: inline-block;
+  background-color: #ffff;
+  color: #333;
+  padding: 8px 20px 6px;
+  font-weight: 600;
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 24px;
+}
 .mainmenu ul li ul.sub-menu li {
   display: block;
   border-bottom: 1px solid #ddd;
@@ -732,9 +720,18 @@ input[type="submit"]:hover {
   z-index: 2;
   color: #fff;
   padding: 15px 0;
-  background: #ff5e18;
+  background: #333;
 }
-
+.cta::before {
+  position: absolute;
+  content: "";
+  width: 45%;
+  height: 100%;
+  background-color: #fe2b00;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
 .cta h1 {
   font-weight: 700;
   font-size: 45px;
@@ -748,6 +745,7 @@ input[type="submit"]:hover {
 .cta ul li {
   font-size: 20px;
   line-height: 40px;
+  font-weight: 600;
 }
 
 .top_cat {
@@ -785,7 +783,7 @@ input[type="submit"]:hover {
 
 .top_cat span {
   font-weight: 900;
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 .cta ul {
@@ -795,25 +793,27 @@ input[type="submit"]:hover {
 /* 14. Page Title */
 
 .section-title h4 {
-  font-size: 40px;
+  font-size: 50px;
   text-transform: capitalize;
-  color: #ff5e18;
+  color: #ff0022;
   position: relative;
   display: inline-block;
   padding-bottom: 25px;
+  font-weight: 700;
 }
 
 .section-title p {
-  font-size: 24px;
+  font-size: 20px;
   font-family: Oleo Script;
-  margin-bottom: 0px;
+  margin-bottom: -5px;
+  text-transform: lowercase;
 }
 
 .section-title h4:before,
 .section-title h4:after {
   position: absolute;
   content: "";
-  background-color: #ff5e18;
+  background-color: #ff0022;
 }
 
 .section-title h4:before {
@@ -876,7 +876,7 @@ input[type="submit"]:hover {
 
 .set_menu li span {
   float: right;
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 .set_menu li {
@@ -922,7 +922,7 @@ input[type="submit"]:hover {
 .single_menu_list h4 span {
   float: right;
   font-weight: bold;
-  color: #ff5e18;
+  color: #ff0022;
   font-style: italic;
 }
 
@@ -963,8 +963,8 @@ input[type="submit"]:hover {
 .menu_tab .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
   color: white;
-  background-color: #ff5e18;
-  border-color: #ff5e18;
+  background-color: #ff0022;
+  border-color: #ff0022;
 }
 
 .nav-item a {
@@ -986,6 +986,8 @@ input[type="submit"]:hover {
   border: 1px solid #eee;
   border-radius: 0px;
   margin-bottom: 25px;
+  padding: 10px;
+  font-weight: 700;
 }
 
 /* 7. Blog Page */
@@ -1007,7 +1009,7 @@ input[type="submit"]:hover {
 }
 
 .blog_content a.blog_more {
-  color: #ff5e18;
+  color: #ff0022;
   text-transform: capitalize;
   font-size: 14px;
   border-top: 1px dashed #eee;
@@ -1016,7 +1018,7 @@ input[type="submit"]:hover {
 }
 
 .blog_content h4 a:hover {
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 .blog_author {
@@ -1063,7 +1065,7 @@ input[type="submit"]:hover {
   transition: 0.3s;
 }
 .blog_content ul li a:hover {
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 /* 8. Single Blog Page */
@@ -1150,7 +1152,7 @@ input[type="submit"]:hover {
 }
 
 .single_comment a {
-  color: #ff5e18;
+  color: #ff0022;
   text-transform: capitalize;
   margin-top: 0px;
   display: block;
@@ -1169,7 +1171,7 @@ input[type="submit"]:hover {
 }
 
 .comment_form input[type="submit"] {
-  background-color: #ff5e18;
+  background-color: #ff0022;
   color: #fff;
   font-size: 18px;
 }
@@ -1200,7 +1202,7 @@ input[type="submit"]:hover {
 .single_sidebar input[type="submit"] {
   position: absolute;
   right: 0;
-  background-color: #ff5e18;
+  background-color: #ff0022;
   color: #fff;
   text-transform: capitalize;
   padding: 5px;
@@ -1228,7 +1230,7 @@ input[type="submit"]:hover {
 }
 
 .single_sidebar ul li a:hover {
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 .single_sidebar li img {
@@ -1296,7 +1298,6 @@ a.single_gallery {
   position: relative;
   transition: 0.3s;
   overflow: hidden;
-  margin-bottom: 45px;
 }
 
 a.single_gallery img {
@@ -1534,7 +1535,7 @@ a.single_gallery:hover::before {
 
 .contact-area input[type="submit"] {
   color: #fff;
-  background-color: #ff5e18;
+  background-color: #ff0022;
   border: 0px;
   padding: 10px 30px;
   text-transform: capitalize;
@@ -1556,16 +1557,16 @@ a.single_gallery:hover::before {
   font-weight: 400;
 }
 
-.single_address i.fa {
+.single_address i {
   position: absolute;
   left: 0;
   top: 7px;
-  border: 1px solid #ff5e18;
+  border: 1px solid #ff0022;
   width: 40px;
   height: 40px;
   line-height: 40px;
   text-align: center;
-  color: #ff5e18;
+  color: #ff0022;
 }
 
 .map iframe {
@@ -1573,6 +1574,7 @@ a.single_gallery:hover::before {
   margin-top: 35px;
   height: 400px;
   border: 0px;
+  vertical-align: middle;
 }
 
 /* 13. Footer */
@@ -1602,6 +1604,7 @@ a.single_gallery:hover::before {
 
 .footer a {
   color: #fff;
+  font-weight: 500;
 }
 
 .single_footer {
@@ -1621,6 +1624,7 @@ a.single_gallery:hover::before {
   margin-bottom: 9px;
   position: relative;
   padding-left: 25px;
+  font-weight: 500;
 }
 
 .single_footer ul li a:hover {
@@ -1708,7 +1712,7 @@ a.single_gallery:hover::before {
 }
 .menu-cat ul li a {
   color: #333;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
 }
 .menu-cat ul li {
@@ -1737,6 +1741,13 @@ a.single_gallery:hover::before {
   font-weight: 600;
   margin-top: 7px;
 }
+.item-title span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 5px;
+}
 .item-price {
   font-size: 20px;
   margin-bottom: 0;
@@ -1758,17 +1769,17 @@ a.single_gallery:hover::before {
 }
 .menu-list h3,
 .menu-title {
-  font-size: 24px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 600;
   position: relative;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
   margin-bottom: 20px;
 }
 .menu-list h3:before,
 .menu-title:before {
   position: absolute;
   content: "";
-  background-color: tomato;
+  background-color: #ff0022;
   width: 40px;
   height: 2px;
   bottom: 0;
@@ -1777,20 +1788,317 @@ a.single_gallery:hover::before {
 .menu-right {
   margin-bottom: 40px;
 }
-
 .menu-right ul li {
-  font-weight: 500;
+  font-weight: 400;
   margin-bottom: 5px;
   padding-bottom: 5px;
+  font-size: 16px;
 }
 .navbar-expand-md .navbar-collapse {
   display: flex !important;
   flex-basis: auto;
   justify-content: flex-end;
 }
-
 .navbar ul li a {
-  font-size: 18px;
-  font-weight: 500 !important;
+  font-size: 16px;
+  font-weight: 600 !important;
   padding: 0 10px !important;
+}
+/* 11. Team Area CSS */
+
+.single-team img {
+  width: 100%;
+}
+.single-team {
+  position: relative;
+  overflow: hidden;
+}
+.team-hover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  z-index: 1;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  visibility: hidden;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transform: scale(0.3);
+  transform: scale(0.3);
+}
+.team-hover-table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.team-hover-cell {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+}
+
+.team-hover:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #333;
+  opacity: 0.9;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  z-index: -1;
+}
+.single-team:hover .team-hover {
+  visibility: visible;
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+.team-hover h4 {
+  margin-bottom: 0;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.team-hover p {
+  color: #fff;
+  font-weight: 300;
+  font-size: 14px;
+}
+.team-social a {
+  display: inline-block;
+  color: #fff;
+  font-size: 15px;
+  margin: 0 5px;
+}
+.team-social {
+  margin-top: 15px;
+}
+
+/* 12. Video Area CSS */
+
+.video-area {
+  position: relative;
+  z-index: 2;
+  background-image: url("../img/test_back.jpg");
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+}
+.video-area:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #333;
+  z-index: -1;
+  opacity: 0.8;
+}
+.video-area i {
+  font-size: 70px;
+}
+.video-area h4 {
+  font-size: 40px;
+  margin: 30px 0;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.video-area p {
+  color: #fff;
+}
+.why-choose {
+  position: relative;
+  z-index: 2;
+  background-image: url("../img/process.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.why-choose:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #333;
+  z-index: -1;
+  opacity: 0.8;
+}
+
+.single-process h6 {
+  background-color: #e67e22;
+  color: #fff;
+  display: inline-block;
+  padding: 10px 20px;
+  text-transform: capitalize;
+  font-size: 20px;
+  position: relative;
+  text-align: left;
+  width: 100%;
+  border-radius: 5px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.single-process h6 span {
+  background-color: #ff0022;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 100%;
+  line-height: 45px;
+  text-align: center;
+  font-size: 20px;
+}
+.single-process h4 {
+  text-transform: capitalize;
+  font-size: 22px;
+  color: #fff;
+  margin: 20px 0;
+}
+.single-process p {
+  color: #fff;
+}
+
+.single-about i.bi {
+  font-size: 25px;
+}
+.single-about h4 {
+  margin: 20px 0;
+  font-weight: 500;
+  text-transform: capitalize;
+  font-size: 22px;
+}
+.single-about a {
+  text-transform: capitalize;
+  margin-top: 10px;
+  display: block;
+  color: #ff0022;
+}
+
+.about-text h4 {
+  text-transform: capitalize;
+  font-size: 28px;
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+.about-text p {
+  margin-bottom: 5px;
+}
+.about-text ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+  float: left;
+  width: 50%;
+  margin: 15px 0;
+}
+.about-text ul li {
+  margin-bottom: 10px;
+  color: #646f79;
+  font-size: 14px;
+}
+.about-text ul li,
+.single-feature ul li {
+  margin-bottom: 10px;
+  color: #646f79;
+  font-size: 14px;
+}
+.about-text ul li i,
+.single-feature ul li i {
+  padding-right: 5px;
+  color: #646f79;
+}
+
+.about-img img {
+  width: 100%;
+}
+.about-img {
+  position: relative;
+  z-index: 2;
+}
+.about-img {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.about-img-1,
+.about-img-2,
+.about-img-3,
+.about-img-4 {
+  background-size: cover;
+  background-position: center;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 5px 15px;
+  margin: 15px;
+}
+.about-img-1 {
+  width: 45%;
+  height: 250px;
+}
+.about-img-2 {
+  width: 45%;
+  height: 210px;
+}
+.about-img-3 {
+  width: 45%;
+  height: 250px;
+}
+.about-img-4 {
+  width: 45%;
+  height: 220px;
+  margin-top: -50px;
+}
+.slider .owl-dots div {
+  width: 20px;
+  height: 20px;
+  background-color: #eee;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.slider .owl-dots div.active {
+  background-color: #ff0022;
+}
+
+.slider .owl-controls {
+  height: auto;
+}
+
+.slider .owl-dots {
+  margin-top: -60px;
+  z-index: 3;
+  position: absolute;
+  text-align: center;
+  right: 40px;
+  top: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+.header.header-fixed.sticky {
+  padding: 0;
+}
+.header.header-fixed.sticky img {
+  max-width: 130px;
+}
+.header.header-fixed.sticky nav {
+  padding: 10px 0;
+}
+.header.header-fixed.sticky a {
+  font-size: 16px;
+}
+.menu-cat {
+  position: sticky;
+  top: 100px !important;
+}
+.menu-cat ul li.current a{
+  color: #ff0022
 }
