--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@
   color: #ff0022;
   position: relative;
   display: inline-block;
-  padding-bottom: 15px;
+  padding-bottom: 25px;
   font-weight: 700;
 }
 .section-title p {
@@ -1521,7 +1521,7 @@ a.single_gallery:hover::before {
 
 .mainmenu ul li ul {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   background-color: #fff;
   box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.05);
   top: 45px;
@@ -1583,4 +1583,13 @@ a.single_gallery:hover::before {
   padding-top: 5px;
   font-weight: 600 !important;
   font-size: 18px;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+.single-booking input {
+  margin-bottom: 15px;
+}
+.navbar .container-fluid {
+  padding: 0;
 }
